# Haxby-2001-replication

./: .gitignore  README.md  main.py  pyproject.toml
src/: analysis.py  data_loader.py  pipeline.py  preprocessing.py  visualization.py
tests/: test_project.py
